; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/x86/xen/extr_suspend.c_xen_vcpu_notify_restore.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/x86/xen/extr_suspend.c_xen_vcpu_notify_restore.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*)* @xen_vcpu_notify_restore to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @xen_vcpu_notify_restore(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i64, align 8
  store i8* %0, i8** %2, align 8
  %4 = load i8*, i8** %2, align 8
  %5 = ptrtoint i8* %4 to i64
  store i64 %5, i64* %3, align 8
  %6 = call i64 (...) @smp_processor_id()
  %7 = icmp eq i64 %6, 0
  br i1 %7, label %8, label %9

8:                                                ; preds = %1
  br label %12

9:                                                ; preds = %1
  %10 = load i64, i64* %3, align 8
  %11 = call i32 @clockevents_notify(i64 %10, i32* null)
  br label %12

12:                                               ; preds = %9, %8
  ret void
}

declare dso_local i64 @smp_processor_id(...) #1

declare dso_local i32 @clockevents_notify(i64, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
